<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <!--1、scroll
        向上滚动的时候设置该值的view先出 scrollview再滚动,
        向下滚动的时候 scrollview先滚动到顶部,该view才进入屏幕。-->

        <!--2、scroll|enterAlways
        向上滚动的时候设置该值的view先出 scrollview再滚动,
        向下滚动的时该view先进屏幕,scrollview再滚动-->

        <!--3、scroll|enterAlways|enterAlwaysCollapsed
        向上滚动的时候设置该值的view先出 scrollview再滚动;
        向下滚动的时候该view的Toolbar先进屏幕,scrollview再消耗滚动距离,
        scrollview滚动到最上方的时候,该view剩下的高度再进来-->

        <!--4、scroll|exitUntilCollapsed
        向上滚动的时候，该view先滚动只剩Toolbar，剩下的scrollview消耗。
        也就是说设置该flag的view不会完全滚出屏幕，而总是把Toolbar留在屏幕里，
        向下滚动的时候scrollview滚动至顶部，view完全进入屏幕，-->

        <!--5、scroll|snap
        设置该flag的view只会完全退出(进入屏幕),以上几个都是有可能只有一部分退出(进入屏幕)-->

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="left"
            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat"
            app:contentScrim="#ff00ff"
            app:expandedTitleGravity="center|bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:scrimAnimationDuration="1200"
            app:scrimVisibleHeightTrigger="400dp"
            app:title="Collapsing"
            app:titleEnabled="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:src="@drawable/faces"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.6"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:title="@string/action_settings" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:tabIndicatorColor="@color/colorPrimaryDark"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/colorPrimary"
                app:tabTextColor="@color/colorAccent">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/faces"
                    android:text="@string/app_name" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/face"
                    android:text="@string/app_name" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/large_text" />
            </androidx.core.widget.NestedScrollView>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="ContentDescription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>